# chain_watcher

./: Cargo.toml  README.md  config.yaml  eth.keystore  key  metadata.scale  pk.json  test_account  testnet.json  token.json
contract/: DECP.sol  DEP.sol  Dapp-template.sol  DeeperMachine.sol  EZC.sol  Oracle-demo.sol  developer.sol
jenkins/: Jenkinsfile
key/: eth_key  eth_key.bak  evm_wallet
src/: lib.rs  main.rs  worker.rs
src/sub_client/: mod.rs
