[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = {version = "3.1.8",features = [ "derive" ]}
json= "0.12.4"
docker_runner = { git = "https://github.com/FrontMage/docker_runner" }
simplelog = "0.10.2"
log = "0.4.14"
openssl = { version = "0.10.32", features = ["vendored"] }
ethers = "0.6.2"
