[package]
name = "dep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
simplelog = "0.10.2"
log = "0.4.14"
ethers = "0.6.2"
sp-core = "6.0.0"
sp-keyring = "6.0.0"
secp256k1 = { version = "0.21", features = ["recovery"] }
serde_json = "1.0.68"
